добавил ручку результата поиска
