# polls/main_api_app/routes.py
@@ -10,6 +10,7 @@ def setup_routes(app):
     app.router.add_get('/products', views.new_products)
     app.router.add_get('/products/list', views.products_list)
     app.router.add_get('/products/search', views.search_products)
+    app.router.add_get('/products/search/result', views.search_products_result)
     app.router.add_get('/products/{id}', views.product)
 
     app.router.add_get('/profile/mypage', views.mypage)
